--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -38,11 +38,11 @@ jobs:
       - name: Build and push Docker image
         run: gcloud builds submit --tag us-central1-docker.pkg.dev/notely-02/notely-ar-repo/notely:latest .
 
-      - name: Install Goose
+      - name: Install goose
         run: go install github.com/pressly/goose/v3/cmd/goose@latest
 
-      - name: Run DB migrations
-        run: ./scripts/buildprod.sh
+      - name: Run migrations
+        run: ./scripts/migrateup.sh
 
       - name: Deploy to Cloud Run
         run: gcloud run deploy notely --image us-central1-docker.pkg.dev/notely-02/notely-ar-repo/notely:latest --region us-central1 --allow-unauthenticated --project notely-02 --max-instances=4
